LU-2368 recovery: fix for obd_stale_clients counter

class_fail_export() occured during recovery process, when
the mds connect to ost from new IP(failover happened), and cause
perpetual recovery.
- in class_fail_export() update obd_stale_clients counter if
  recovery is in progress.

Signed-off-by: Mikhail Pershin <tappro@whamcloud.com>
Signed-off-by: Alexander Boyko <alexander_boyko@xyratex.com>
Xyratex-bug-id: MRP-738
Change-Id: I2b2fe5853a9b0713a0a9357713f612b331505c6f
Reviewed-on: http://review.whamcloud.com/4641
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Keith Mannthey <keith.mannthey@intel.com>
Reviewed-by: Keith Mannthey <DELETED>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>