lustre/obdclass/genops.c
@@ -718,12 +718,20 @@ void class_export_recovery_cleanup(struct obd_export *exp)
         cfs_spin_lock(&obd->obd_recovery_task_lock);
         if (exp->exp_delayed)
                 obd->obd_delayed_clients--;
-        if (obd->obd_recovering && exp->exp_in_recovery) {
-                cfs_spin_lock(&exp->exp_lock);
-                exp->exp_in_recovery = 0;
-                cfs_spin_unlock(&exp->exp_lock);
-                LASSERT(obd->obd_connected_clients);
-                obd->obd_connected_clients--;
+	if (obd->obd_recovering) {
+		if (exp->exp_in_recovery) {
+			cfs_spin_lock(&exp->exp_lock);
+			exp->exp_in_recovery = 0;
+			cfs_spin_unlock(&exp->exp_lock);
+			LASSERT(obd->obd_connected_clients);
+			obd->obd_connected_clients--;
+		}
+		/* if called during recovery then should update
+		 * obd_stale_clients counter,
+		 * lightweight exports are not counted */
+		if (exp->exp_failed &&
+		    (exp->exp_connect_flags & OBD_CONNECT_LIGHTWEIGHT) == 0)
+			exp->exp_obd->obd_stale_clients++;
         }
         cfs_spin_unlock(&obd->obd_recovery_task_lock);
         /** Cleanup req replay fields */
@@ -1263,7 +1271,7 @@ void class_disconnect_stale_exports(struct obd_device *obd,
                         continue;
 
 		cfs_spin_lock(&exp->exp_lock);
-		if (test_export(exp)) {
+		if (exp->exp_failed || test_export(exp)) {
 			cfs_spin_unlock(&exp->exp_lock);
 			continue;
 		}
@@ -1278,15 +1286,13 @@ void class_disconnect_stale_exports(struct obd_device *obd,
                        libcfs_nid2str(exp->exp_connection->c_peer.nid));
                 print_export_data(exp, "EVICTING", 0);
         }
-        cfs_spin_unlock(&obd->obd_dev_lock);
+	cfs_spin_unlock(&obd->obd_dev_lock);
 
-        if (evicted) {
-                LCONSOLE_WARN("%s: disconnecting %d stale clients\n",
-                              obd->obd_name, evicted);
-                obd->obd_stale_clients += evicted;
-        }
-        class_disconnect_export_list(&work_list, exp_flags_from_obd(obd) |
-                                                 OBD_OPT_ABORT_RECOV);
+	if (evicted)
+		LCONSOLE_WARN("%s: disconnecting %d stale clients\n",
+			      obd->obd_name, evicted);
+	class_disconnect_export_list(&work_list, exp_flags_from_obd(obd) |
+				     OBD_OPT_ABORT_RECOV);
         EXIT;
 }
 EXPORT_SYMBOL(class_disconnect_stale_exports);
